[gd_scene load_steps=13 format=2]

[ext_resource path="res://Views/Battle/UI/BattleMap.gd" type="Script" id=1]
[ext_resource path="res://TextureBank/Backgrounds/3x3GridPerspective.png" type="Texture" id=2]
[ext_resource path="res://Views/Battle/UI/BattleTile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Views/Battle/UI/Battler.tscn" type="PackedScene" id=4]
[ext_resource path="res://TextureBank/Backgrounds/BattleFieldSquares/TopMiddle.png" type="Texture" id=5]
[ext_resource path="res://TextureBank/Backgrounds/BattleFieldSquares/TopRight.png" type="Texture" id=6]
[ext_resource path="res://TextureBank/Backgrounds/BattleFieldSquares/CenterLeft.png" type="Texture" id=7]
[ext_resource path="res://TextureBank/Backgrounds/BattleFieldSquares/Center.png" type="Texture" id=8]
[ext_resource path="res://TextureBank/Backgrounds/BattleFieldSquares/CenterRight.png" type="Texture" id=9]
[ext_resource path="res://TextureBank/Backgrounds/BattleFieldSquares/BottomLeft.png" type="Texture" id=10]
[ext_resource path="res://TextureBank/Backgrounds/BattleFieldSquares/BottomMiddle.png" type="Texture" id=11]
[ext_resource path="res://TextureBank/Backgrounds/BattleFieldSquares/BottomRight.png" type="Texture" id=12]

[node name="BattleMap" type="Control"]
mouse_filter = 2
mouse_default_cursor_shape = 1
script = ExtResource( 1 )

[node name="Player" type="TextureRect" parent="."]
margin_left = 129.198
margin_top = -75.0
margin_right = 901.198
margin_bottom = 698.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Floor_0_0" parent="Player" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 240.884
margin_top = 330.998
margin_right = 465.884
margin_bottom = 434.998
rect_scale = Vector2( 0.95, 0.95 )
mouse_default_cursor_shape = 13
isPlayer = true

[node name="Unit_0_0" parent="Player" groups=[
"PlayerBattlers",
] instance=ExtResource( 4 )]
margin_left = 330.169
margin_top = 170.0
margin_right = 330.169
margin_bottom = 170.0
rect_scale = Vector2( 0.85, 0.85 )

[node name="Floor_0_1" parent="Player" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 417.811
margin_top = 330.743
margin_right = 619.811
margin_bottom = 433.743
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 5 )
isPlayer = true
myY = 1

[node name="Unit_0_1" parent="Player" groups=[
"PlayerBattlers",
] instance=ExtResource( 4 )]
margin_left = 494.824
margin_top = 170.0
margin_right = 494.824
margin_bottom = 170.0
rect_scale = Vector2( 0.85, 0.85 )
myY = 1

[node name="Floor_0_2" parent="Player" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 597.425
margin_top = 330.0
margin_right = 776.425
margin_bottom = 433.0
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 6 )
isPlayer = true
myY = 2

[node name="Unit_0_2" parent="Player" groups=[
"PlayerBattlers",
] instance=ExtResource( 4 )]
margin_left = 680.745
margin_top = 170.0
margin_right = 680.745
margin_bottom = 170.0
rect_scale = Vector2( 0.85, 0.85 )
myY = 2

[node name="Floor_1_0" parent="Player" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 146.412
margin_top = 433.951
margin_right = 420.412
margin_bottom = 572.951
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 7 )
isPlayer = true
myX = 1

[node name="Unit_1_0" parent="Player" groups=[
"PlayerBattlers",
] instance=ExtResource( 4 )]
margin_left = 221.604
margin_top = 270.0
margin_right = 221.604
margin_bottom = 270.0
myX = 1

[node name="Floor_1_1" parent="Player" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 355.558
margin_top = 434.952
margin_right = 596.558
margin_bottom = 573.952
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 8 )
isPlayer = true
myX = 1
myY = 1

[node name="Unit_1_1" parent="Player" groups=[
"PlayerBattlers",
] instance=ExtResource( 4 )]
margin_left = 402.513
margin_top = 270.0
margin_right = 402.513
margin_bottom = 270.0
myX = 1
myY = 1

[node name="Floor_1_2" parent="Player" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 564.553
margin_top = 433.952
margin_right = 776.553
margin_bottom = 572.952
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 9 )
isPlayer = true
myX = 1
myY = 2

[node name="Unit_1_2" parent="Player" groups=[
"PlayerBattlers",
] instance=ExtResource( 4 )]
margin_left = 608.473
margin_top = 280.549
margin_right = 608.473
margin_bottom = 280.549
myX = 1
myY = 2

[node name="Floor_2_0" parent="Player" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 7.29779
margin_top = 577.868
margin_right = 354.298
margin_bottom = 778.868
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 10 )
isPlayer = true
myX = 2

[node name="Unit_2_0" parent="Player" groups=[
"PlayerBattlers",
] instance=ExtResource( 4 )]
margin_left = 89.8382
margin_top = 420.0
margin_right = 89.8382
margin_bottom = 420.0
rect_scale = Vector2( 1.15, 1.15 )
myX = 2

[node name="Floor_2_1" parent="Player" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 265.153
margin_top = 578.865
margin_right = 567.153
margin_bottom = 779.865
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 11 )
isPlayer = true
myX = 2
myY = 1

[node name="Unit_2_1" parent="Player" groups=[
"PlayerBattlers",
] instance=ExtResource( 4 )]
margin_left = 305.818
margin_top = 420.0
margin_right = 305.818
margin_bottom = 420.0
rect_scale = Vector2( 1.15, 1.15 )
myX = 2
myY = 1

[node name="Floor_2_2" parent="Player" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 519.795
margin_top = 577.868
margin_right = 778.795
margin_bottom = 778.868
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 12 )
isPlayer = true
myX = 2
myY = 2

[node name="Unit_2_2" parent="Player" groups=[
"PlayerBattlers",
] instance=ExtResource( 4 )]
margin_left = 527.952
margin_top = 420.0
margin_right = 527.952
margin_bottom = 420.0
rect_scale = Vector2( 1.15, 1.15 )
myX = 2
myY = 2

[node name="Enemy" type="TextureRect" parent="."]
margin_left = 1790.98
margin_top = -75.0
margin_right = 2562.98
margin_bottom = 698.0
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Floor_0_2" parent="Enemy" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 598.0
margin_top = 329.272
margin_right = 777.0
margin_bottom = 432.272
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 6 )
myY = 2

[node name="Unit_0_2" parent="Enemy" groups=[
"EnemyBattlers",
] instance=ExtResource( 4 )]
margin_left = 657.94
margin_top = 181.019
margin_right = 657.94
margin_bottom = 181.019
rect_scale = Vector2( 0.85, 0.85 )
isOnPlayerSide = false
myY = 2

[node name="Floor_0_1" parent="Enemy" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 419.0
margin_top = 332.0
margin_right = 621.0
margin_bottom = 435.0
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 5 )
myY = 1

[node name="Unit_0_1" parent="Enemy" groups=[
"EnemyBattlers",
] instance=ExtResource( 4 )]
margin_left = 489.363
margin_top = 170.0
margin_right = 489.363
margin_bottom = 170.0
rect_scale = Vector2( 0.85, 0.85 )
isOnPlayerSide = false
myY = 1

[node name="Floor_0_0" parent="Enemy" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 241.0
margin_top = 330.0
margin_right = 466.0
margin_bottom = 434.0
rect_scale = Vector2( 0.95, 0.95 )

[node name="Unit_0_0" parent="Enemy" groups=[
"EnemyBattlers",
] instance=ExtResource( 4 )]
margin_left = 297.429
margin_top = 177.043
margin_right = 297.429
margin_bottom = 177.043
rect_scale = Vector2( 0.85, 0.85 )
isOnPlayerSide = false

[node name="Floor_1_2" parent="Enemy" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 566.0
margin_top = 435.952
margin_right = 778.0
margin_bottom = 574.952
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 9 )
myX = 1
myY = 2

[node name="Unit_1_2" parent="Enemy" groups=[
"EnemyBattlers",
] instance=ExtResource( 4 )]
margin_left = 598.839
margin_top = 276.475
margin_right = 598.839
margin_bottom = 276.475
isOnPlayerSide = false
myX = 1
myY = 2

[node name="Floor_1_1" parent="Enemy" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 358.0
margin_top = 437.0
margin_right = 599.0
margin_bottom = 576.0
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 8 )
myX = 1
myY = 1

[node name="Unit_1_1" parent="Enemy" groups=[
"EnemyBattlers",
] instance=ExtResource( 4 )]
margin_left = 407.524
margin_top = 270.0
margin_right = 407.524
margin_bottom = 270.0
isOnPlayerSide = false
myX = 1
myY = 1

[node name="Floor_1_0" parent="Enemy" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 144.0
margin_top = 437.952
margin_right = 418.0
margin_bottom = 576.952
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 7 )
myX = 1

[node name="Unit_1_0" parent="Enemy" groups=[
"EnemyBattlers",
] instance=ExtResource( 4 )]
margin_left = 204.673
margin_top = 285.109
margin_right = 204.673
margin_bottom = 285.109
isOnPlayerSide = false
myX = 1

[node name="Floor_2_2" parent="Enemy" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 521.0
margin_top = 576.0
margin_right = 780.0
margin_bottom = 777.0
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 12 )
myX = 2
myY = 2

[node name="Unit_2_2" parent="Enemy" groups=[
"EnemyBattlers",
] instance=ExtResource( 4 )]
margin_left = 522.269
margin_top = 420.0
margin_right = 522.269
margin_bottom = 420.0
rect_scale = Vector2( 1.15, 1.15 )
isOnPlayerSide = false
myX = 2
myY = 2

[node name="Floor_2_1" parent="Enemy" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 263.0
margin_top = 575.868
margin_right = 565.0
margin_bottom = 776.868
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 11 )
myX = 2
myY = 1

[node name="Unit_2_1" parent="Enemy" groups=[
"EnemyBattlers",
] instance=ExtResource( 4 )]
margin_left = 294.618
margin_top = 420.0
margin_right = 294.618
margin_bottom = 420.0
rect_scale = Vector2( 1.15, 1.15 )
isOnPlayerSide = false
myX = 2
myY = 1

[node name="Floor_2_0" parent="Enemy" groups=[
"PlayerFloor",
] instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 8.99994
margin_top = 577.868
margin_right = 356.0
margin_bottom = 778.868
rect_scale = Vector2( 0.95, 0.95 )
texture = ExtResource( 10 )
myX = 2

[node name="Unit_2_0" parent="Enemy" groups=[
"EnemyBattlers",
] instance=ExtResource( 4 )]
margin_left = 76.2915
margin_top = 420.0
margin_right = 76.2915
margin_bottom = 420.0
rect_scale = Vector2( 1.15, 1.15 )
isOnPlayerSide = false
myX = 2
